# learnings

./: .gitignore  Cargo.toml
lesson1-sampling/: Cargo.toml
lesson1-sampling/data/: inv_cdf.csv  samples.txt
lesson1-sampling/src/: lib.rs  step_pdf.rs
lesson2-montecarlo/: Cargo.toml
lesson2-montecarlo/data/: importance_montecarlo.csv  mis_montecarlo.csv  uniform_montecarlo.csv
lesson2-montecarlo/src/: importance_sampling.rs  lib.rs  montecarlo_integrable.rs  multiple_importance_2.rs  multiple_importance_n.rs
lesson3-russian-roulette/: Cargo.toml
lesson3-russian-roulette/data/: russian-roulette-results.csv  russian-roulette-time.csv
lesson3-russian-roulette/src/: lib.rs
lesson4-hemispheres/: Cargo.toml
lesson4-hemispheres/src/: lib.rs
rand/: uniform_samples.txt
rand/data/: uniform_samples.txt
rand/src/: lib.rs
video1-sampling/: Cargo.toml  cdf.csv  samples.txt
video1-sampling/data/: pdf.csv  samples.txt
video1-sampling/src/: step_pdf.rs
video2-montecarlo/: Cargo.toml
video2-montecarlo/data/: importance_montecarlo.csv  mis_montecarlo.csv  uniform_montecarlo.csv
video2-montecarlo/src/: importance_sampling.rs  montecarlo_integrable.rs  multiple_importance_2.rs  multiple_importance_n.rs
video3-russian-roulette/: Cargo.toml
video3-russian-roulette/src/: lib.rs
video4-hemispheres/: Cargo.toml
video4-hemispheres/src/: lib.rs
