[package]
name = "learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "rand",
    "video1-sampling",
    "video2-montecarlo",
    "video3-russian-roulette",
    "video4-hemispheres",
]


[dependencies]
