[package]
name = "learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "rand",
    "lesson1-sampling",
    "lesson2-montecarlo",
    "lesson3-russian-roulette",
    "lesson4-hemispheres",
    "lesson5-micrograd",
]

[dependencies]

[workspace.dependencies]
criterion = { version = "0.3" }
